fixed z-index issue with form

--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -432,7 +432,7 @@ nav .navbar-collapse.collapse {
 .contact-form {
   padding: 3rem 1rem;
   position: relative;
-  z-index: 9999;
+  z-index: 2;
 }
 
 .contact-form .form-group label {
